# SilvaViridis.Python.LinuxAPI

./: .gitignore  README.md  pyproject.toml  sample.py
src/SilvaViridis/Python/LinuxAPI/: USBDeviceManager.py
typings/pyudev/: core.pyi  device.pyi
