[project]
name = "SilvaViridis.Python.LinuxAPI"
version = "0.1.0"
description = "LinuxAPI wrapper"
authors = [
    {name = "Maria Sorokina", email = "ruafelianna@ya.ru"},
]
dependencies = [
    "pyudev>=0.24.3",
    "pyudev-stubs @ https://github.com/ruafelianna/pyudev-stubs/releases/download/v0.1.2/pyudev_stubs-0.1.2-py3-none-any.whl"
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
build.includes = [
    "src/SilvaViridis/Python",
]

[tool.pdm.dev-dependencies]
test = [
    "pyright>=1.1",
]

[tool.pdm.scripts]
clean.shell = """
rm -rf .pdm-build dist \\
    ; find . -type d -name __pycache__ -exec rm -rf {} +
"""
build.shell = """
pdm install -d \\
    && pdm run pyright \\
    && pdm build
"""
update_lock.cmd = "pdm lock -G:all"
